syntax = "proto3";

package proto;


service Olap {
  rpc GetResult(OlapRequest) returns (stream OlapResult) {}
}

message OlapRequest {
  string request = 1;
}

message OlapResult {
  map<string, string> tuple = 2;
}
